[package]
name = "microhex"
version = "0.8.1"      # uses Semantic Versioning (semver): MAJOR.MINOR.PATCH
edition = "2024"
authors = ["TDPenguin"]
license = "MIT"
description = "A modern, lightweight TUI hex editor. Like Nano for binary files."
readme = "README.md"
repository = "https://github.com/TDPenguin/microhex"

[dependencies]
crossterm = "0.29.0"